[gd_scene load_steps=5 format=3 uid="uid://intro_screen_uid"]

[ext_resource type="Script" path="res://IntroScreen.gd" id="1_intro"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_top_color = Color(0.05, 0.05, 0.1, 1)
sky_horizon_color = Color(0.1, 0.1, 0.2, 1)
ground_bottom_color = Color(0.05, 0.05, 0.1, 1)
ground_horizon_color = Color(0.1, 0.1, 0.2, 1)

[sub_resource type="Sky" id="Sky_intro"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_intro"]
background_mode = 2
sky = SubResource("Sky_intro")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
glow_enabled = true
glow_intensity = 0.5
glow_strength = 1.0
glow_bloom = 0.5

[node name="IntroScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_intro")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="World3D" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/World3D"]
environment = SubResource("Environment_intro")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/World3D"]
transform = Transform3D(0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, -0.353553, 0.612372, 0, 0, 0)
light_energy = 1.5
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/World3D"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, -10, 2, 0)

[node name="ShipPivot" type="Node3D" parent="SubViewportContainer/SubViewport/World3D"]
unique_name_in_owner = true

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="TitleLabel" type="Label" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "BOTERION"
horizontal_alignment = 1

[node name="StartLabel" type="Label" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "- PRESS ANY KEY -"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
script = null

